force-app/main/default/objects/Offer__c/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <description>Details of other compensation benefits (insurance, allowances, stock eligibility).</description>
    <label>Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>