force-app/main/default/objects/Offer__c/fields/CTC__c.field-meta.xml
<CustomField>
    <fullName>CTC__c</fullName>
    <description>The Cost to Company (annual base pay / salary package) offered.</description>
    <label>CTC</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>