force-app/main/default/objects/Offer__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>The job title/designation offered to the candidate.</description>
    <label>Designation</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>