force-app/main/default/objects/Offer__c/fields/Probation_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Probation_Period_Months__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The duration of probation in months.</description>
    <label>Probation Period (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>