force-app/main/default/objects/Offer__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reason captured if the candidate rejects the offer.</description>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>