force-app/main/default/objects/Offer__c/fields/Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Validity_Date__c</fullName>
    <description>The expiry/validity date of the sent offer letter.</description>
    <label>Validity Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>