force-app/main/default/objects/Offer__c/validationRules/Rejection_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required</fullName>
    <active>true</active>
    <description>Ensures that a rejection reason must be documented when an offer is marked as Rejected.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Rejected&quot;), ISBLANK(Rejection_Reason__c))</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please provide a rejection reason when rejecting an offer.</errorMessage>
</ValidationRule>