force-app/main/default/objects/Offer__c/validationRules/Validity_Date_Must_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Validity_Date_Must_Be_Future</fullName>
    <active>true</active>
    <description>Ensures that the validity date of the offer letter is not in the past.</description>
    <errorConditionFormula>Validity_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Validity_Date__c</errorDisplayField>
    <errorMessage>The offer validity date cannot be in the past.</errorMessage>
</ValidationRule>